# strusWebService

./: .gitignore  .travis.yml  AUTHORS  BUGS  CHANGELOG  CMakeLists.txt  CONTRIBUTING  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.Ubuntu.md  LICENSE.3rdParty  README  README.3rdParty  README.md  ROADMAP.md  TODOS  config.js  config.js.in  strusWebService.kdev4
.Attic/src/: webRequestDelegateContext.cpp
client_curl/: CMakeLists.txt  strusWebServiceClient.cpp
client_perl/: convDocAnaConfigToJson.pl  getDocumentFeatures.pl  getFeatureVectors.pl  getStorageDocument.pl  getStorageDocumentFeatures.pl  strusClient.pl
client_perl/Strus/: Client.pm
cmake/: CheckCXX11Features.cmake  FindCURL.cmake  FindCppCms.cmake  boost.cmake  build_rules.cmake  cxx11.cmake  destination.cmake  dist.cmake  link_rules.cmake  standard_targets.cmake
democlient/: README.3rdParty  index.html
democlient/css/: simple.css
democlient/js/: jquery-ui.css
doc/slides/: strus-webservice.html
examples/: GET_requests.sh  INSERT_contentstats.sh  INSERT_requests.sh  POST_contentstats_transaction.sh  POST_requests.sh  POST_transaction.sh  PUT_contentstats.sh  PUT_docanalyzer.sh  PUT_inserter.sh  PUT_storage.sh  buildAll.sh  buildAll_demo.sh  buildAll_remote.sh  contentstats.json  docanalyzer.json  httpie_POST_requests.sh  inserter.json  qryanalyzer.json  query.analyzed.json  query.orig.json  query.orig.json-UTF16BE  query.orig.xml  query.plain.json  queryeval.json  reuters.ana  storage.json  vectors.json  vstorage.json
schema/JSON/: config.jsd
schema/JSON/DELETE/: storage.jsd  vstorage.jsd
schema/JSON/GET/: analyzer.jsd  qryanalyzer.jsd  qryeval.jsd  statserver.jsd  storage.jsd
schema/JSON/POST/: contentstats.jsd  distqryeval.jsd  docanalyzer.jsd  inserter.jsd  qryanalyzer.jsd  storage.jsd  vstorage.jsd
schema/JSON/PUT/: contentstats.jsd  docanalyzer.jsd  inserter.jsd  qryeval.jsd  statserver.jsd  storage.jsd  vstorage.jsd
schema/JSON/PUT/transaction/: storage.jsd  vstorage.jsd
schema/JSON/PUT~statistics/: statserver.jsd
schema/JSON/SET~querystats/: distqryeval.jsd
schema/XML/: config.xsd
schema/XML/DELETE/: storage.xsd  vstorage.xsd
schema/XML/GET/: analyzer.xsd  distqryeval.xsd  qryanalyzer.xsd  qryeval.xsd  statserver.xsd  storage.xsd
schema/XML/POST/: distqryeval.xsd  docanalyzer.xsd  inserter.xsd  qryanalyzer.xsd  storage.xsd  vstorage.xsd
schema/XML/PUT/: contentstats.xsd  docanalyzer.xsd  inserter.xsd  qryanalyzer.xsd  qryeval.xsd  statserver.xsd  storage.xsd  vstorage.xsd
schema/XML/PUT/transaction/: storage.xsd  vstorage.xsd
schema/XML/PUT~statistics/: statserver.xsd
src/: CMakeLists.txt  applicationImpl.cpp  applicationImpl.hpp  applicationMessageBuf.cpp  applicationMessageBuf.hpp  applicationRequestBuf.cpp  applicationRequestBuf.hpp  configUtils.cpp  configUtils.hpp  constants.hpp  defaultContants.hpp  document.cpp  document.hpp  error_codes.hpp  index.cpp  index.hpp  internationalization.cpp.in  main.cpp  master.cpp  master.hpp  other.cpp  other.hpp  pathIter.hpp  ping.cpp  ping.hpp  query.cpp  query.hpp  requestContextImpl.cpp  requestContextImpl.hpp  serviceClosure.cpp  serviceClosure.hpp  storage.cpp  storage.hpp  strusContext.cpp  strusContext.hpp  strusIndexContext.cpp  strusIndexContext.hpp  strusWebService.cpp  strusWebService.hpp  transaction.cpp  (+9 more)
src.old/: constants.hpp  document.cpp  document.hpp  error_codes.hpp  main.cpp  master.cpp  other.cpp  other.hpp  query.hpp  strusContext.cpp  strusIndexContext.cpp  strusWebService.hpp  transaction.cpp  transaction.hpp
tests/: CMakeLists.txt  create_index_A.must  create_index_A.url  create_index_A_params_missing.must  create_index_A_params_missing.url  create_index_B.url  create_index_C.url  create_index_params_missing.url  curlFeeder.cpp  curlJsonTester.cpp  delete_index_A.url  delete_index_B.url  delete_index_C.url  document_delete.url  document_exists_doc1.must  document_exists_doc1.url  document_exists_doc2.url  document_exists_doc3.url  document_get.must  document_get.url  document_insert.url  document_nonexist_delete.url  document_payload_docid_insert.url  document_url_docid_insert.url  explicit_close_A.url  explicit_open_A.url  index_config_A.must  index_config_A.url  index_config_C.must  index_config_C.url  index_list.must  index_stats_A.must  index_stats_A.url  index_stats_A_after_insert.must  index_stats_A_after_nonexist_delete.must  index_stats_A_after_nonexist_delete.url  invalid_json.must  invalid_json.url  list_after_swap.url  ping.must  (+28 more)
tests.old/: create_index_A.url  create_index_C.url  curlFeeder.cpp  curlJsonTester.cpp  delete_index_A.url  document_exists_doc2.url  document_exists_doc3.url  document_get.must  document_insert.url  document_nonexist_delete.must  document_url_docid_insert.url  explicit_close_A.url  index_config_A.must  index_config_C.must  index_config_C.url  index_stats_A_after_delete.must  list_after_swap.must  list_after_swap.url  ping.url  post_not_get.must  query_A.must  query_in_url.must  rename_A_D.url  rename_B_A.url  swap_B_D.url  transaction_delete_commit.must  transaction_delete_commit.url  transaction_delete_doc2.url  transaction_insert_doc1.url  transaction_insert_doc3.url
tests/cppcms_hello/: CMakeLists.txt  config.js
tests/cppcms_hello/src/: CMakeLists.txt  testCppCmsHelloWorld.cpp
